tests/NormalTests/paczka1/fuzzy1/23516326.err
Error in line 5: S75 A589 17,34
Error in line 22: 5fK9Dnp S75 51,96
Error in line 25: dwjDD S999 90,1
Error in line 30: ffXfCIJ1T8 S75 183,69
Error in line 21: BsBW0c S75 34,9
Error in line 33: BsBW0c S530 86,8
